tests/snapshots/snapshot_tests__saturated_red_background.snap
---
source: tests/snapshot_tests.rs
expression: snapshot
---
name: Saturated Red
variant: Dark
base00: "#4d0000"
base01: "#5f140f"
base02: "#863933"
base03: "#b0645f"
base04: "#d58f8b"
base05: "#f1b5b3"
base06: "#ffd1d1"
base07: "#ffe0e0"
base08: "#ffbfb7"
base09: "#ffc49b"
base0a: "#edd08b"
base0b: "#b2dea8"
base0c: "#9cdccb"
base0d: "#a7d1ff"
base0e: "#c9c8fc"
base0f: "#f6b8ea"
base10: "#ff9a8e"
base11: "#f4a870"
base12: "#ddb857"
base13: "#8bcd82"
base14: "#60cab4"
base15: "#73bbff"
base16: "#acadfa"
base17: "#eb96df"
